<resources>
    <string name="app_name">Chromium</string>
    <string name="autofill_clear_local_copy_button">Clear copy</string>
    <string name="autofill_card_unmask_prompt_storage_checkbox">Keep a copy of this card on this device</string>
    <string name="autofill_card_unmask_prompt_storage_tooltip">If checked, Chromium will store a copy of your card on this device for faster form filling.</string>
    <string name="autofill_card_unmask_confirm_button">Verify</string>
    <string name="autofill_card_unmask_verification_in_progress">Verifying card</string>
    <string name="autofill_card_unmask_verification_success">Your card is verified</string>
    <string name="autofill_card_unmask_expiration_date_separator">/</string>
    <string name="autofill_card_unmask_new_card_link">New card?</string>
    <string name="http_post_warning">"The page that you're looking for used information that you entered. Returning to that page might cause any action you took to be repeated. Do you want to continue?"</string>
    <string name="http_post_warning_resend">Continue</string>
    <string name="login_dialog_title">Authentication Required</string>
    <string name="login_dialog_username_field">User Name:</string>
    <string name="login_dialog_password_field">Password:</string>
    <string name="login_dialog_ok_button_label">Log In</string>
    <string name="sad_tab_title">Aw, Snap!</string>
    <string name="sad_tab_message">Something went wrong while displaying this webpage.</string>
    <string name="sad_tab_reload_label">Reload</string>
    <string name="infobar_update_permissions_button_text">Update permissions</string>
    <string name="options_homepage_title">Home page</string>
    <string name="autofill_from_google_account">Google Payments</string>
    <string name="infobar_message_typeface">sans-serif</string>
    <string name="help_context_new_tab">mobile_new_tab</string>
    <string name="help_context_search_results">mobile_search_results</string>
    <string name="help_context_webpage">mobile_webpage</string>
    <string name="help_context_settings">mobile_settings</string>
    <string name="help_context_incognito">mobile_incognito</string>
    <string name="help_context_bookmarks">mobile_bookmarks</string>
    <string name="help_context_history">mobile_history</string>
    <string name="help_context_privacy">mobile_privacy</string>
    <string name="help_context_translate">mobile_translate</string>
    <string name="help_context_general">mobile_general</string>
    <string name="help_context_protected_content">protected_content</string>
    <string name="help_context_data_reduction">reduce_data_usage</string>
    <string name="help_context_incognito_learn_more">chrome_incognito</string>
    <string name="help_context_usage_reports">send_crash_report</string>
    <string name="help_context_sad_tab">mobile_awsnap</string>
    <string name="help_context_physical_web">physical_web</string>
    <string name="help_context_clear_browsing_data">clear_browsing_data</string>
    <string name="help_context_change_sync_passphrase">change_sync_passphrase</string>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="learn_more">Learn more</string>
    <string name="menu_help">Help &amp; feedback</string>
    <string name="prefs_section_basics">Basics</string>
    <string name="prefs_section_advanced">Advanced</string>
    <string name="sign_in_to_chrome">Sign in to Chrome</string>
    <string name="prefs_search_engine">Search engine</string>
    <string name="prefs_autofill">Autofill forms</string>
    <string name="prefs_saved_passwords">Save passwords</string>
    <string name="options_homepage_edit_label">Open this page</string>
    <string name="prefs_privacy">Privacy</string>
    <string name="navigation_error_title">Navigation error suggestions</string>
    <string name="navigation_error_summary">Show suggestions when a web address does not resolve or a connection cannot be made</string>
    <string name="search_suggestions_title">Search and URL suggestions</string>
    <string name="search_suggestions_summary">Use a prediction service to show related queries and popular websites as you type in the address bar</string>
    <string name="safe_browsing_extended_reporting_title">Security incidents</string>
    <string name="safe_browsing_extended_reporting_summary">Automatically report details of possible security incidents to Google</string>
    <string name="safe_browsing_title">Safe Browsing</string>
    <string name="safe_browsing_summary">Protect you and your device from dangerous sites</string>
    <string name="network_predictions_title">Use a prediction service to load pages more quickly</string>
    <string name="contextual_search_title">Touch to Search</string>
    <string name="crash_dump_upload_title">Usage and crash reports</string>
    <string name="crash_dump_never_upload_value">crash_dump_never_upload</string>
    <string name="do_not_track_title">“Do Not Track”</string>
    <string name="clear_browsing_data_title">Clear browsing data</string>
    <string name="clear_browsing_data_summary">Clear history, cookies, site data, cache…</string>
    <string name="clear_cache_title">Cached images and files</string>
    <string name="clear_history_title">Browsing history</string>
    <string name="clear_cookies_and_site_data_title">Cookies and site data</string>
    <string name="clear_cookies_and_site_data_summary">This will sign you out of most websites.</string>
    <string name="clear_passwords_title">Saved passwords</string>
    <string name="clear_form_data_title">Autofill form data</string>
    <string name="clear_data_delete">Clear data</string>
    <string name="clear_browsing_data_period_title">Clear data from the</string>
    <string name="usage_and_crash_reports_title">Usage and crash reports</string>
    <string name="prefs_accessibility">Accessibility</string>
    <string name="prefs_site_settings">Site settings</string>
    <string name="data_reduction_title">Data Saver</string>
    <string name="prefs_about_chrome">About Chrome</string>
    <string name="account_management_title">Signed in to Google as</string>
    <string name="account_management_sign_out">Sign out of Chrome</string>
    <string name="account_management_parental_settings">Parental Settings</string>
    <string name="account_management_child_content_title">Content</string>
    <string name="account_management_child_safe_sites_title">Google SafeSites filter</string>
    <string name="sign_in_sync">Sync</string>
    <string name="sync_description">Get your bookmarks, history, passwords, and other settings on all your devices</string>
    <string name="sync_data_types">Data types</string>
    <string name="sync_everything_pref">Sync everything</string>
    <string name="sync_autofill">Autofill</string>
    <string name="sync_bookmarks">Bookmarks</string>
    <string name="sync_history">History</string>
    <string name="sync_passwords">Passwords</string>
    <string name="sync_recent_tabs">Open tabs</string>
    <string name="sync_settings">Settings</string>
    <string name="payments_integration">Credit cards and addresses using Google Payments</string>
    <string name="sync_encryption">Encryption</string>
    <string name="sync_manage_data">Manage synced data</string>
    <string name="sync_custom_passphrase">"Only someone with your passphrase can read your encrypted data. The passphrase is not sent to or stored by Google. If you forget your passphrase or want to change this setting you'll need to reset sync. &lt;learnmore>Learn more&lt;/learnmore>"</string>
    <string name="sync_enter_custom_passphrase_hint">Passphrase</string>
    <string name="sync_enter_custom_passphrase_hint_confirm">Confirm passphrase</string>
    <string name="close_tab_and_return">Close the current tab and return to the previous app</string>
    <string name="menu_print">Print…</string>
    <string name="menu_share_page">Share…</string>
    <string name="accessibility_menu_bookmark">Bookmark this page</string>
    <string name="accessibility_menu_forward">Go forward</string>
    <string name="accessibility_menu_info">View site information</string>
    <string name="menu_add_to_homescreen">Add to Home screen</string>
    <string name="tabs_and_apps_title">Merge tabs and apps</string>
    <string name="menu_update">Update Chrome</string>
    <string name="menu_new_tab">New tab</string>
    <string name="menu_new_incognito_tab">New incognito tab</string>
    <string name="menu_recent_tabs">Recent tabs</string>
    <string name="menu_history">History</string>
    <string name="menu_find_in_page">Find in page</string>
    <string name="menu_request_desktop_site">Request desktop site</string>
    <string name="menu_reader_mode_prefs">Appearance</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_close_all_tabs">Close all tabs</string>
    <string name="menu_close_all_incognito_tabs">Close incognito tabs</string>
    <string name="bookmark_sign_in_promo_title">Sync your bookmarks</string>
    <string name="bookmark_sign_in_promo_description">To get your bookmarks on all your devices, sign in to Chrome</string>
    <string name="bookmark_sign_in_promo_no_thanks">No, thanks</string>
    <string name="bookmark_sign_in_promo_sign_in">Sign in</string>
    <string name="accessibility_toolbar_btn_menu">More options</string>
    <string name="accessibility_toolbar_btn_new_tab">New tab</string>
    <string name="accessibility_toolbar_btn_tabswitcher_toggle">%1$d open tabs</string>
    <string name="accessibility_toolbar_btn_home">Home</string>
    <string name="accessibility_btn_refresh">Refresh page</string>
    <string name="physical_web_pref_title">Physical Web</string>
</resources>