<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <org.chromium.chrome.browser.preferences.SignInPreference android:title="@string/sign_in_to_chrome" android:key="sign_in" />
    <PreferenceCategory android:title="@string/prefs_section_basics" />
    <org.chromium.chrome.browser.preferences.SearchEnginePreference android:title="@string/prefs_search_engine" android:key="search_engine" />
    <Preference android:title="@string/tabs_and_apps_title" android:key="document_mode" android:fragment="org.chromium.chrome.browser.preferences.DocumentModePreference" />
    <org.chromium.chrome.browser.preferences.ChromeBasePreference android:title="@string/prefs_autofill" android:key="autofill_settings" android:fragment="org.chromium.chrome.browser.preferences.autofill.AutofillPreferences" />
    <org.chromium.chrome.browser.preferences.ChromeBasePreference android:title="@string/prefs_saved_passwords" android:key="saved_passwords" android:fragment="org.chromium.chrome.browser.preferences.password.SavePasswordsPreferences" />
    <Preference android:title="@string/options_homepage_title" android:key="homepage" android:fragment="org.chromium.chrome.browser.preferences.HomepagePreferences" />
    <PreferenceCategory android:title="@string/prefs_section_advanced" />
    <Preference android:title="@string/prefs_privacy" android:key="privacy" android:fragment="org.chromium.chrome.browser.preferences.privacy.PrivacyPreferences" />
    <Preference android:title="@string/prefs_accessibility" android:key="accessibility" android:fragment="org.chromium.chrome.browser.preferences.AccessibilityPreferences" />
    <Preference android:title="@string/prefs_site_settings" android:key="content_settings" android:fragment="org.chromium.chrome.browser.preferences.website.SiteSettingsPreferences" />
    <org.chromium.chrome.browser.preferences.ChromeBasePreference android:title="@string/data_reduction_title" android:key="data_reduction" android:fragment="org.chromium.chrome.browser.preferences.datareduction.DataReductionPreferences" />
    <Preference android:title="@string/prefs_about_chrome" android:key="about_chrome" android:fragment="org.chromium.chrome.browser.preferences.AboutChromePreferences" />
</PreferenceScreen>