<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:chrome="http://schemas.android.com/apk/res-auto">
    <org.chromium.chrome.browser.preferences.SpinnerPreference android:persistent="false" android:title="@string/clear_browsing_data_period_title" android:key="time_period_spinner" />
    <org.chromium.chrome.browser.preferences.ClearBrowsingDataCheckBoxPreference android:persistent="false" android:title="@string/clear_history_title" android:key="clear_history_checkbox" />
    <org.chromium.chrome.browser.preferences.ClearBrowsingDataCheckBoxPreference android:persistent="false" android:title="@string/clear_cookies_and_site_data_title" android:key="clear_cookies_checkbox" android:summaryOn="@string/clear_cookies_and_site_data_summary" />
    <org.chromium.chrome.browser.preferences.ClearBrowsingDataCheckBoxPreference android:persistent="false" android:title="@string/clear_cache_title" android:key="clear_cache_checkbox" />
    <org.chromium.chrome.browser.preferences.ClearBrowsingDataCheckBoxPreference android:persistent="false" android:title="@string/clear_passwords_title" android:key="clear_passwords_checkbox" />
    <org.chromium.chrome.browser.preferences.ClearBrowsingDataCheckBoxPreference android:persistent="false" android:title="@string/clear_form_data_title" android:key="clear_form_data_checkbox" />
    <org.chromium.chrome.browser.preferences.ButtonPreference android:title="@string/clear_data_delete" android:key="clear_button" />
    <Preference android:layout="@layout/divider_preference" />
    <org.chromium.chrome.browser.preferences.TextMessagePreference android:key="summary" />
    <org.chromium.chrome.browser.preferences.LearnMorePreference android:title="@string/learn_more" chrome:helpContext="@string/help_context_clear_browsing_data" />
</PreferenceScreen>